Fixed a minor CSS spacing issue between the 'show more comments' block and the moderation message.

--- a/python/media/css/main.css
+++ b/python/media/css/main.css
@@ -283,6 +283,7 @@ li .post-comment-metadata {
 
 .show-comments {
     display: none;
+    margin-bottom: 18px;
 }
 
 .user-card {
